--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,8 @@
   <script src="https://kit.fontawesome.com/079f44f127.js" crossorigin="anonymous"></script>
 
 </head>
-<body class="mat-typography">
-  <app-root>
-    
-  </app-root>
+<body>
+  <app-root></app-root>
 </body>
 
 </html>
